Fix Cicek Lab link to use HTTP

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="about-content">
                 <p>
                     I am a Computer Science M.S. student at <strong>Bilkent University</strong>, working as a Graduate Research Assistant
-                    at the <a href="https://ciceklab.cs.bilkent.edu.tr/" target="_blank">Cicek Lab</a>. My research focuses on developing
+                    at the <a href="http://ciceklab.cs.bilkent.edu.tr/" target="_blank">Cicek Lab</a>. My research focuses on developing
                     deep learning methods for genomic variant detection from sequencing data.
                 </p>
                 <p>
